delete some unnecessary nodes